# ChatAppUnix

./: CMakeLists.txt  Makefile  README.md
Client/: ClientGlobals.h  ListenThread.c  ListenThread.h  client.c  client.h
Common/: FileHelpers.c  FileHelpers.h  Messaging.c  Messaging.h  signalHelpers.c  signalHelpers.h  socketHelpers.c  socketHelpers.h
Server/: Globals.h  List.c  List.h  ThreadHandling.c  ThreadHandling.h  server.c  server.h
